# sshp

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  TROUBLESHOOTING.md
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
src/config/: mod.rs  parser.rs
src/selector/: filter.rs  mod.rs  runner.rs
src/ui/: highlight.rs  mod.rs  renderer.rs
tests/: integration_test.rs
